name:           hipsec
version:        0.0.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Low-level networking interface
description:    Low-level networking interface
category:       Network
build-type:     Simple
cabal-version:  >=1.8
homepage:       http://github.com/haskell/network
bug-reports:    http://trac.haskell.org/network/

library
    exposed-modules: Network.Security.Message, Network.Security.PFKey, Network.Security.PFSocket
    build-depends: base >= 4.0.0.0
                 , binary >= 0.5.0.0
                 , bytestring
                 , data-default
                 , extra >= 1.3.1
                 , hex
                 , ioctl
                 , mtl
                 , network
                 , select
                 , socket
                 , time
                 , unix


Executable setkey
    build-depends: base >= 4.0.0.0
                 , binary >= 0.5.0.0
                 , bytestring
                 , cmdargs >= 0.10.13
                 , data-default
                 , extra >= 1.3.1
                 , hex
                 , hipsec
                 , ioctl
                 , network
                 , parsec >= 3.1.9
                 , select
                 , socket
                 , time
                 , unix

    main-is: src/setkey.hs
    buildable: True

    ghc-options: -fwarn-incomplete-patterns

source-repository head
  type:     git
  location: git://github.com/haskell/network.git
