name:           hipsec
version:        0.0.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Tools for configuring and using IPSEC
description:    Tools for configuring and using IPSEC
category:       Network
build-type:     Simple
cabal-version:  >=1.8
homepage:       http://github.com/vladsor/hipsec
bug-reports:    http://github.com/vladsor/hipsec/issues

flag developer
  description: operate in developer mode
  default: False
  manual: True

flag old-locale
  description: If false then depend on time >= 1.5.
               .
               If true then depend on time < 1.5 together with old-locale.
  default: False

library
    exposed-modules: Network.Security.Message, Network.Security.PFKey, Network.Security.PFSocket
    build-depends: base >= 4.0.0.0
                 , binary >= 0.5.0.0
                 , bytestring
                 , data-default
                 , extra >= 1.3.1
                 , hex
                 , ioctl
                 , transformers
                 , select
                 , socket
                 , split
                 , unix
  if flag(old-locale)
    build-depends: time < 1.5, old-locale
  else
    build-depends: time >= 1.5

  if flag(developer)
    ghc-prof-options: -auto-all

    ghc-options: -fwarn-incomplete-patterns

Executable setkey
    main-is: src/setkey.hs
    buildable: True

    build-depends: base >= 4.0.0.0
                 , binary >= 0.5.0.0
                 , bytestring
                 , cmdargs >= 0.10.13
                 , data-default
                 , extra >= 1.3.1
                 , hex
                 , hipsec
                 , ioctl
                 , transformers
                 , parsec >= 3.1.9
                 , select
                 , socket
                 , split
                 , unix
  if flag(old-locale)
    build-depends: time < 1.5, old-locale
  else
    build-depends: time >= 1.5

  if flag(developer)
    ghc-prof-options: -auto-all

    ghc-options: -fwarn-incomplete-patterns

source-repository head
  type:     git
  location: git://github.com/haskell/network.git
